// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Icon base case 1`] = `
<div>
  <span
    class="icon icon--uiflex items-center justify-center"
    style="width: 24px; height: 24px;"
  >
    <span
      class="material-icons material-icons-outlined"
      style="font-size: 24px;"
    >
      settings
    </span>
  </span>
</div>
`;

exports[`Icon custom size 1`] = `
<div>
  <span
    class="icon icon--uiflex items-center justify-center"
    style="width: 16px; height: 16px;"
  >
    <span
      class="material-icons material-icons-outlined"
      style="font-size: 16px;"
    >
      settings
    </span>
  </span>
</div>
`;
